--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 		
 		<div class="hidden logo">
 			<a href="solarwinds.html">
-				<img class="imgbtn" src="./images/solarwinds.png" alt="SolarWinds Picture">
+				<img class="imgbtn" src="./images/solarwinds.PNG" alt="SolarWinds Picture">
 			</a>
 		</div>
 	</div>
